--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+affine==2.4.0
 appnope==0.1.4
 asttokens==2.4.1
+attrs==23.2.0
+certifi==2024.2.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -8,6 +14,7 @@ decorator==5.1.1
 exceptiongroup==1.2.1
 executing==2.0.1
 fonttools==4.52.1
+imageio==2.34.1
 ipykernel==6.29.4
 ipython==8.24.0
 jedi==0.19.1
@@ -16,7 +23,6 @@ jupyter_core==5.7.2
 kiwisolver==1.4.5
 matplotlib==3.9.0
 matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.0
 parso==0.8.4
@@ -32,6 +38,7 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pyzmq==26.0.3
 six==1.16.0
+snuggs==1.4.7
 stack-data==0.6.3
 tornado==6.4
 traitlets==5.14.3
